# agentdeploy

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
examples/langgraph_example/: main.py
src/agentdeploy/: __init__.py
src/agentdeploy/adapters/: __init__.py  base.py  registry.py
src/agentdeploy/cli/: __init__.py  main.py
src/agentdeploy/core/: __init__.py  app.py  deploy.py  hitl.py  observability.py
src/agentdeploy/targets/: __init__.py  cloud_run.py  docker_compose.py  kubernetes.py  lambda_target.py
tests/: test_core.py
