[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentdeploy"
version = "0.1.0"
description = "Zero-boilerplate deployment for AI agent frameworks — LangGraph, CrewAI, OpenAI Agents SDK, and custom agents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Aaron"}]
keywords = ["ai", "agents", "deployment", "kubernetes", "docker", "langgraph", "crewai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "pydantic>=2.0",
    "typer>=0.12",
    "rich>=13.0",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20",
    "langgraph>=1.1.10",
]

[project.optional-dependencies]
langgraph = ["langgraph>=0.2"]
crewai    = ["crewai>=0.70"]
openai    = ["openai>=1.50"]
claude    = ["anthropic>=0.34"]
k8s       = ["kubernetes>=28.1"]
aws       = ["boto3>=1.34"]
gcp       = ["google-cloud-run>=0.10"]
dev       = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "build>=1.2",
    "twine>=5.0",
]
all = [
    "agentdeploy[langgraph,crewai,openai,claude,k8s,aws,gcp,dev]",
]

[project.urls]
Homepage      = "https://github.com/erenat77/agentdeploy"
Repository    = "https://github.com/erenat77/agentdeploy"
Issues        = "https://github.com/erenat77/agentdeploy/issues"
Documentation = "https://github.com/erenat77/agentdeploy#readme"
Changelog     = "https://github.com/erenat77/agentdeploy/blob/main/CHANGELOG.md"

[project.scripts]
agentdeploy = "agentdeploy.cli.main:app"

[tool.hatch.version]
path = "src/agentdeploy/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/agentdeploy"]

[tool.hatch.build.targets.sdist]
include = [
    "src/agentdeploy",
    "tests",
    "examples",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]  # line length is enforced by formatter

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/agentdeploy"]
mypy_path = ["src"]

[[tool.mypy.overrides]]
module = ["yaml", "httpx", "opentelemetry.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers"
