# =============================================================================
# PRE-PUSH / PRE-RELEASE CHECKLIST
# -----------------------------------------------------------------------------
# Run these before `git push` and ALWAYS before tagging a release.
# Each step is fast (~5–30 s). If any step fails, fix it before pushing.
#
#   1. Activate the project venv (don't pollute system / global Python)
#        source .venv/bin/activate
#        which python                          # must point inside .venv
#
#   2. Lint
#        ruff check src tests                  # -> "All checks passed!"
#        ruff format --check src tests         # -> no diff
#
#   3. Type-check (advisory until type coverage is in shape)
#        mypy src/agentdeploy
#
#   4. Tests
#        pytest tests/ -v                      # 26+ tests, all green
#        pytest tests/ --cov=agentdeploy --cov-report=term-missing
#
#   5. CLI smoke
#        agentdeploy version                   # prints "AgentDeploy v0.1.0"
#
#   6. Build distributions (catches packaging / metadata errors early)
#        rm -rf dist/
#        uv build                              # or: python -m build
#        ls dist/                              # expect .tar.gz + .whl
#
#   7. Inspect the wheel (sanity-check what's actually shipping)
#        unzip -l dist/agentdeploy-*.whl | grep -v __pycache__
#
#   8. Optional: install the wheel into a throwaway venv to confirm import
#        uv venv /tmp/agentdeploy-isolated
#        source /tmp/agentdeploy-isolated/bin/activate
#        uv pip install dist/agentdeploy-*.whl
#        agentdeploy version
#        python -c "from agentdeploy import AgentApp, deploy; print('ok')"
#        deactivate
#
# -----------------------------------------------------------------------------
# RELEASE-ONLY (after step 1–8 are green and changes are pushed to main)
# -----------------------------------------------------------------------------
#   9. Bump version in this file [project].version AND src/agentdeploy/__init__.py
#  10. Move CHANGELOG.md [Unreleased] entries into a new dated section
#  11. Commit + tag + push:
#        git commit -am "release: vX.Y.Z"
#        git tag vX.Y.Z
#        git push origin main --tags
#  12. The .github/workflows/release.yml workflow takes over and publishes
#      to PyPI via Trusted Publishing, then creates a GitHub Release.
# =============================================================================

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentdeploy"
version = "0.1.0"
description = "Zero-boilerplate deployment for AI agent frameworks — LangGraph, CrewAI, OpenAI Agents SDK, and custom agents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Aaron"}]
keywords = ["ai", "agents", "deployment", "kubernetes", "docker", "langgraph", "crewai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "pydantic>=2.0",
    "typer>=0.12",
    "rich>=13.0",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20",
    "langgraph>=1.1.10",
]

[project.optional-dependencies]
langgraph = ["langgraph>=0.2"]
crewai    = ["crewai>=0.70"]
openai    = ["openai>=1.50"]
claude    = ["anthropic>=0.34"]
k8s       = ["kubernetes>=28.1"]
aws       = ["boto3>=1.34"]
gcp       = ["google-cloud-run>=0.10"]
dev       = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "build>=1.2",
    "twine>=5.0",
]
all = [
    "agentdeploy[langgraph,crewai,openai,claude,k8s,aws,gcp,dev]",
]

[project.urls]
Homepage      = "https://github.com/erenat77/agentdeploy"
Repository    = "https://github.com/erenat77/agentdeploy"
Issues        = "https://github.com/erenat77/agentdeploy/issues"
Documentation = "https://github.com/erenat77/agentdeploy#readme"
Changelog     = "https://github.com/erenat77/agentdeploy/blob/main/CHANGELOG.md"

[project.scripts]
agentdeploy = "agentdeploy.cli.main:app"

[tool.hatch.version]
path = "src/agentdeploy/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/agentdeploy"]

[tool.hatch.build.targets.sdist]
include = [
    "src/agentdeploy",
    "tests",
    "examples",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]  # line length is enforced by formatter

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/agentdeploy"]
mypy_path = ["src"]

[[tool.mypy.overrides]]
module = ["yaml", "httpx", "opentelemetry.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers"
